@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_init.c,v 1.311 2007-11-30 19:10:04 remko Exp $
+ *	$Id: gmt_init.c,v 1.312 2007-12-01 04:19:05 remko Exp $
  *
  *	Copyright (c) 1991-2007 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -2300,9 +2300,16 @@ BOOLEAN true_false_or_error (char *value, int *answer)
 
 void GMT_putdefaults (char *this_file)	/* Dumps the GMT parameters to file or standard output */
 {
-	if (this_file)
+	if (this_file)	/* File name is defined: use it */
 		GMT_savedefaults (this_file);
-	else
+	else if (GMT_TMPDIR) {	/* Write $GMT_TMPDIR/.gmtdefaults4 */
+		char *path = CNULL;
+		path = (char *) GMT_memory (VNULL, (size_t)(strlen (GMT_TMPDIR) + 15), sizeof (char), "GMT");
+		sprintf (path, "%s%c.gmtdefaults4", GMT_TMPDIR, DIR_DELIM);
+		GMT_savedefaults (path);
+		GMT_free(path);
+	}
+	else	/* Write .gmtdefaults4 in current directory */
 		GMT_savedefaults (".gmtdefaults4");
 }
 
@@ -3153,7 +3160,7 @@ void GMT_end (int argc, char **argv)
 	for (i = 0; i < 3; i++) for (j = 0; j < 2; j++) if (GMT_plot_format[i][j]) GMT_free ((void *)GMT_plot_format[i][j]);
 
 	if (gmtdefs.encoding.name) free (gmtdefs.encoding.name);
-	
+
 	fflush (GMT_stdout);	/* Make sure output buffer is flushed */
 
 	Free_GMT_Ctrl (GMT);	/* Deallocate control structure */
@@ -3229,6 +3236,18 @@ void GMT_set_home (void)
 		strcpy (GMT_IMGDIR, this);
 		if (access(GMT_IMGDIR,R_OK)) GMT_IMGDIR = CNULL;
 	}
+
+	/* Determine GMT_TMPDIR (for isolation mode). Needs to exist use it. */
+
+	if ((this = getenv("GMT_TMPDIR")) != CNULL) {	/* GMT_TMPDIR was set */
+		GMT_TMPDIR = (char *) GMT_memory (VNULL, (size_t)(strlen (this) + 1), sizeof (char), "GMT");
+		strcpy (GMT_TMPDIR, this);
+		if (access(GMT_TMPDIR,R_OK+W_OK+X_OK)) {
+			fprintf (stderr, "GMT WARNING: Environment variable GMT_TMPDIR was set to %s, but directory is not accessible.\n", GMT_TMPDIR);
+			fprintf (stderr, "GMT WARNING: GMT_TMPDIR needs to have mode rwx. Isolation mode switched off.\n");
+			GMT_TMPDIR = CNULL;
+		}
+	}
 }
 
 int GMT_history (int argc, char ** argv)
@@ -3245,7 +3264,7 @@ int GMT_history (int argc, char ** argv)
 
 	if (!gmtdefs.history) return (GMT_NOERROR);	/* .gmtcommands4 mechanism has been disabled */
 
-	/* Open .gmtcommands4 file and retrive old argv (if any)
+	/* Open .gmtcommands4 file and retrieve old argv (if any)
 	 * This is tricky since GMT programs are often hooked together
 	 * with pipes so it actually has happened that the first program
 	 * is updating the .gmtcommands4 file while the second tries to
@@ -3265,7 +3284,9 @@ int GMT_history (int argc, char ** argv)
 	/* If current directory is writable, use it; else use the home directory */
 
 	(void) getcwd (cwd, BUFSIZ);
-	if (!access (cwd, W_OK)) 	/* Current directory is writable */
+	if (GMT_TMPDIR)			/* Isolation mode: Use GMT_TMPDIR/.gmtcommands4 */
+		sprintf (hfile, "%s%c.gmtcommands4", GMT_TMPDIR, DIR_DELIM);
+	else if (!access (cwd, W_OK)) 	/* Current directory is writable */
 		sprintf (hfile, ".gmtcommands4");
 	else 	/* Try home directory instead */
 		sprintf (hfile, "%s%c.gmtcommands4", GMT_HOMEDIR, DIR_DELIM);
